@@ -2,6 +2,7 @@ package org.irods.jargon.datautils.datacache;
 
 import java.security.spec.AlgorithmParameterSpec;
 import java.security.spec.KeySpec;
+import java.util.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.IllegalBlockSizeException;
@@ -93,6 +94,7 @@ public class CacheEncryptor {
 	}
 
 	/**
+	 * 
 	 * Takes a single String as an argument and returns an Encrypted version of that
 	 * String.
 	 *
@@ -111,7 +113,7 @@ public class CacheEncryptor {
 			byte[] enc = ecipher.doFinal(utf8);
 
 			// Encode bytes to base64 to get a string
-			return new sun.misc.BASE64Encoder().encode(enc);
+			return Base64.getEncoder().encodeToString(enc);
 
 		} catch (Exception e) {
 			throw new JargonException(e);
@@ -134,7 +136,7 @@ public class CacheEncryptor {
 		try {
 
 			// Decode base64 to get bytes
-			byte[] dec = new sun.misc.BASE64Decoder().decodeBuffer(str);
+			byte[] dec = Base64.getDecoder().decode(str);
 
 			// Decrypt
 			byte[] utf8 = dcipher.doFinal(dec);
